# amd-eai-suite

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierrc  .shellcheckrc  .spectral.yaml  README.md  biome.json  pyproject.toml
apps/api/airm/: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  rabbitmq-backup.Dockerfile  seed-db.sql
apps/api/airm/app/: __init__.py  __main__.py
apps/api/airm/migrations/: 001_baseline_schema.xml  003_add_keycloak_user_id_to_user.xml  008_add_cluster_nodes.xml  010_standardize_index_names.xml  012_add_is_ready_to_cluster_node.xml  013_add_missing_indexes.xml  014_add_workload_components.xml  015_rename_cpu_count_in_cluster_nodes.xml  018_workloads_status_index.xml  019_remove_dataset_path_add_dataset_id.xml  020_add_unique_constraints.xml  021_refactor_managed_workloads.xml  024_add_overlay_unique_constraint.xml  025_add_status_reason_to_workload_components.xml  026_make_cluster_name_optional.xml  028_add_project_memberships_table.xml  030_add_name_and_display_name_to_managed_workloads.xml  033_update_dataset_constraints.xml  035_update_inference_models_unique_constraint.xml  036_add_users_last_active_at_column.xml  037_add_workload_time_summaries.xml  040_add_cluster_id_to_project.xml  046_add_namespaces_table.xml  048_add_status_to_project_nullable.xml  049_add_secrets_and_project_secrets_tables.xml  052_add_gpt_oss_models.xml  055_add_keycloak_group_id.xml  057_make_cluster_base_url_optional.xml  059_save_gpu_info_in_db.xml  064_add_storages_and_project_storages_tables.xml  065_update_enum_values_to_use_str_enum.xml  069_refactor_inference_models_remove_type_and_rename_base_model.xml  070_add_hf_token_secret_to_models.xml  071_org_cascade_delete_secrets_and_storages.xml  075_add_cluster_auth_group_id_to_workloads.xml  079_add_organization_secret_assignment_table.xml  083_rename_base_url_and_add_kube_api_url.xml  086_fix_dataset_fk_ondelete_to_set_null.xml  087_make_namespace_project_id_nullable_and_add_unique_index.xml  088_optimize_workloads_filtering_indexes.xml  (+5 more)
apps/api/airm/specs/: README.md  __init__.robot  arguments.txt  health.robot
apps/api/airm/tests/: conftest.py  dependency_overrides.py  factory.py  test_mcp_integration.py
apps/api/aiwb/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  prometheus_config.yaml  pyproject.toml  pytest.ini  seed-db.sql
apps/api/aiwb/app/: __init__.py  __main__.py  config.py
apps/api/aiwb/migrations/: 001_create_datasets_table.xml  002_create_charts_tables.xml  003_create_inference_models_table.xml  004_create_aim_services_table.xml  005_create_workloads_tables.xml  006_create_api_keys_table.xml  changelog.xml
apps/api/aiwb/specs/: README.md  __init__.robot  aim_catalog.robot  aims.robot  api_keys.robot  arguments.txt  charts.robot  datasets.robot  finetuning.robot  models.robot  secrets.robot  test_aim_catalog_generator.py  workspaces.robot
apps/api/aiwb/tests/: conftest.py  dependency_overrides.py  factory.py
apps/api/api_common/: README.md  pyproject.toml  pytest.ini
apps/api/api_common/api_common/: database.py  exceptions.py  fastapi.py  models.py  schemas.py
apps/ui/aiwb/: .env.local.example  Dockerfile  README.md  custom.d.ts  next-i18next.config.js  next.config.js  package.json  pnpm-lock.yaml  postcss.config.js  proxy.ts  pyproject.toml  vitest.config.ts
apps/ui/aiwb/__tests__/: ProviderWrapper.tsx  setup.ts
apps/ui/aiwb/contexts/: ProjectContext.tsx
apps/ui/aiwb/enums/: index.ts  namespace-workloads-table-field.ts
apps/ui/aiwb/hooks/: useGPUMetrics.ts  useWorkloadLogsStream.ts
apps/ui/aiwb/lib/: INSTRUCTION.md
apps/ui/aiwb/pages/: _app.tsx  _error.tsx  index.tsx
apps/ui/aiwb/specs/: __init__.robot  aim_catalog.robot  aim_versions.robot  api_keys.robot  arguments.txt  autoscaling.robot  secrets.robot
apps/ui/aiwb/styles/: globals.css  toastify.css
apps/ui/aiwb/types/: INSTRUCTION.md  aims.ts  chat.ts  cluster.ts  metrics.ts  namespaces.ts  secrets.ts
services/airm/api/: .env.example  AI_RULES.md  README.md  airm-realm.json  docker-compose.yaml  prometheus_config.yaml  pyproject.toml  pytest.ini  seed-db.sql
services/airm/api/.github/: copilot-instructions.md
services/airm/api/app/: __init__.py  __main__.py
services/airm/api/dev-vault-config/: load-secrets.sh
services/airm/api/migrations/: 002_add_keycloak_organization_id_to_organization.xml  004_add_workloads_table.xml  005_add_invitation_fields.xml  006_make_unique_indexes_lowercase.xml  007_add_user_group_id_to_workload.xml  009_add_cluster_quotas.xml  011_add_quota_description.xml  016_quotas_adjustments.xml  017_catalog_schemas.xml  022_add_workloads_with_user_group_index.xml  023_set_null_on_delete_for_base_model_fk.xml  027_add_projects_table.xml  029_switch_to_project_id.xml  031_remove_user_groups_from_users.xml  032_drop_user_groups_table.xml  034_add_model_metadata_table.xml  038_add_last_transition_time_to_workloads.xml  039_inference_models_model_weights_nullable.xml  041_remove_name_description_from_quotas.xml  042_rename_project_indexes.xml  043_project_memberships_delete_cascade.xml  044_schema_updates_post_projects.xml  045_rename_delete_requested.xml  047_add_base_url_to_cluster.xml  050_remove_bucket_name_prefix_from_model_weights_path.xml  051_add_more_finetunable_models.xml  053_add_metadata_fields_to_charts.xml  054_index_display_name_workloads.xml  056_add_slug_and_display_name_to_charts.xml  058_make_keycloak_group_id_non_nullable.xml  060_make_project_status_non_nullable.xml  061_fix_cluster_indexes.xml  062_drop_project_memberships_table.xml  063_update_project_name_index.xml  066_remove_cluster_id_from_models_and_datasets.xml  067_update-secrets-and-project-secrets-indexes.xml  068_add_huggingface_secret_support.xml  (+12 more)
services/airm/dispatcher/: .env.example  README.md  pyproject.toml
tooling/mock-cluster-auth/: Dockerfile  pyproject.toml
tooling/mock-cluster-auth/app/: main.py  models.py  routes.py  service.py
tooling/mock-cluster-auth/tests/: test_models.py  test_routes.py  test_service.py
(+2651 files in other folders)
