# Copyright © Advanced Micro Devices, Inc., or its affiliates.
#
# SPDX-License-Identifier: MIT

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[project]
name = "mock-cluster-auth"
version = "0.3.0"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.120.2",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.3",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "httpx>=0.28.1",
]
