# Copyright © Advanced Micro Devices, Inc., or its affiliates.
#
# SPDX-License-Identifier: MIT

[project]
name = "aiwb-api"
version = "0.1.0"
description = "AI Workbench API"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "api_common",
    "workloads_manager",
    "asyncpg~=0.30.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "kubernetes>=31.0.0",
    "kubernetes-asyncio>=31.0.0",
    "loguru>=0.7.3",
    "PyYAML>=6.0.2",
    "python-dotenv>=1.1.0",
    "PyJWT>=2.10.1",
    "sqlalchemy[asyncio]~=2.0.36",
    "uvicorn[standard]>=0.34.0",
    "minio>=7.2.20",
    "tenacity>=9.1.2",
    "python-multipart>=0.0.21",
    "prometheus-api-client>=0.5.7",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.scripts]
dev = "app.__main__:main"
register-charts = "app.charts.__main__:main"

[tool.uv.sources]
api_common = { path = "../api_common", editable = true }
workloads_manager = { path = "../workloads_manager", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.1.1",
    "pytest-env>=1.1.0",
    "pytest-xdist>=3.6.0",
    "filelock>=3.0.0",
    "testcontainers[postgres]>=4.13.2",
    "pre-commit>=4.0.0",
    "robotframework>=7.1.1",
    "robotframework-requests>=0.9.7",
    "robotframework-jsonlibrary>=0.5",
    "packaging>=24.0",
    "requests>=2.32.0",
]
