# Copyright © Advanced Micro Devices, Inc., or its affiliates.
#
# SPDX-License-Identifier: MIT

[project]
name = "aiwb-ui-e2e"
version = "0.1.0"
description = "E2E test dependencies for AIWB UI"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "robotframework>=7.1.1",
    "robotframework-browser>=19.0.0",
    "robotframework-requests>=0.9.7",
    "robotframework-jsonlibrary>=0.5",
    "PyJWT>=2.10.1",
    "PyYAML>=6.0.2",
    "kubernetes>=31.0.0",
    "loguru>=0.7.3",
]
